Branced from an older changeset as my work in no way matched the latest development from @plasticine... doh :p

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
-[submodule "rivet/Twig"]
-	path = rivet/Twig
+[submodule "rivet/addons/Twig"]
+	path = rivet/addons/Twig
 	url = git://github.com/fabpot/Twig.git
+[submodule "rivet/addons/Swiftmailer"]
+	path = rivet/addons/Swiftmailer
+	url = http://github.com/swiftmailer/swiftmailer.git
